feat: ヘッダーのボタンを押すと該当箇所に行くようにした

--- a/public/index.html
+++ b/public/index.html
@@ -1545,7 +1545,7 @@
 
 
 
-<section id="section-resume-experience" class="relative hbb-section blox-resume-experience  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
+<section id="experience" class="relative hbb-section blox-resume-experience  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -1803,7 +1803,7 @@
 
 
 
-<section id="section-resume-skills" class="relative hbb-section blox-resume-skills  " style="padding: 6rem 0 6rem 0;" >
+<section id="skills" class="relative hbb-section blox-resume-skills  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -2079,7 +2079,7 @@
 
 
 
-<section id="section-resume-skills" class="relative hbb-section blox-resume-skills  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
+<section id="work" class="relative hbb-section blox-resume-skills  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -2105,7 +2105,7 @@
 <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center">
 
   <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-    Resume
+    Work
   </div>
 
   
@@ -2355,7 +2355,7 @@
 
 
 
-<section id="section-collection" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
+<section id="products" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -2746,7 +2746,7 @@
 
 
 
-<section id="research" class="relative hbb-section blox-collection  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
+<section id="events" class="relative hbb-section blox-collection  bg-gray-100" style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
